remove some Integer objects